--- a/index.html
+++ b/index.html
@@ -33,24 +33,62 @@
         <div class="row align-items-center justify-content-center">
             <div class="col-10">
 
-                <vime-player>
-                    <vime-video poster="images/maxresdefault.jpg" cross-origin>
-
-                        <!-- Why `data-src`? Lazy loading. You can always use `src` if you don't need it. -->
+                <vime-player playsinline>
+                    <vime-video cross-origin="true" poster="images/maxresdefault.jpg">
                         <source data-src="video/videoplayback.mp4" type="video/mp4" />
-<!--                        <source data-src="https://r4-&#45;&#45;sn-bg07dnzs.googlevideo.com/videoplayback?expire=1606357395&ei=M72-X9iNGsn2xwTUs6jgDA&ip=179.34.46.103&id=o-AGInuV5TlPGPmLU54ya2_PG9ifnNLwS9P6X0aU07qfqj&itag=18&source=youtube&requiressl=yes&gcr=br&vprv=1&mime=video%2Fmp4&ns=doce2YdChIsNI3bM5B_xfLQF&gir=yes&clen=14790338&ratebypass=yes&dur=193.631&lmt=1569641944163093&fvip=4&c=WEB&txp=5531432&n=Usc3GZXm7LaIZFvzuZN&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cgcr%2Cvprv%2Cmime%2Cns%2Cgir%2Cclen%2Cratebypass%2Cdur%2Clmt&sig=AOq0QJ8wRgIhAMGpcMyrneYFK_ben3nt4y1UQHoQbX1NsxXgWGPq8ZrnAiEAtaJwlDnBm6thhPZ3OcULx1wLIMTz_UwSr-Lz_1C9H9c%3D&rm=sn-uphcg51pa-bpbe7z,sn-gpvee7z&req_id=e0c8781172bea3ee&redirect_counter=2&cms_redirect=yes&ipbypass=yes&mh=bG&mip=177.10.253.242&mm=30&mn=sn-bg07dnzs&ms=nxu&mt=1606347857&mv=m&mvi=4&pl=24&lsparams=ipbypass,mh,mip,mm,mn,ms,mv,mvi,pl&lsig=AG3C_xAwRgIhANH18laxg-KCHZyHT8AHqgyws33bjWRR8J3d_LAQeWLlAiEAwQBRmujkqReDMU11T4aiGYazzQMUlCFSBBDtpCAoors%3D" type="video/mp4" />-->
-
+                        <track default kind="subtitles" src="https://media.vimejs.com/subs/english.vtt" srclang="en" label="English" />
+                        <track kind="subtitles" src="https://media.vimejs.com/subs/spanish.vtt" srclang="es" label="Spanish" />
                     </vime-video>
 
-                    <!-- Loads the default Vime UI. -->
                     <vime-default-ui no-controls>
-                        <!-- We setup the default controls and pass in any options.  -->
-                        <vime-default-controls
-                          hide-on-mouse-leave
-                          active-duration="2000"
-                        ></vime-default-controls>
-                    </vime-default-ui>
+                        <vime-scrim></vime-scrim>
 
+                        <vime-controls pin="center">
+                          <vime-playback-control hide-tooltip  style="--vm-control-scale: 1.7;"></vime-playback-control>
+                        </vime-controls>
+
+
+
+                        <vime-controls full-width>
+                            <vime-control-group>
+                                <vime-scrubber-control full-widt class="scrubber-control"></vime-scrubber-control>
+                            </vime-control-group>
+
+                            <vime-control-group class="spaceTop">
+                                    <vime-playback-control></vime-playback-control>
+                                    <vime-volume-control></vime-volume-control>
+                                    <vime-current-time></vime-current-time>
+
+                                    <vime-control>
+                                        <vime-seek-backward>
+                                            <vime-icon href="#vime-seek-backward"></vime-icon>
+                                        </vime-seek-backward>
+                                    </vime-control>
+                                    <vime-control>
+                                        <vime-seek-forward>
+                                            <vime-icon href="#vime-seek-forward"></vime-icon>
+                                        </vime-seek-forward>
+                                    </vime-control>
+
+
+                                    <vime-control-spacer></vime-control-spacer>
+
+
+
+
+                                    <vime-control >
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 1792 1792" width="20" fill="#fff"><path d="M1344 1024q133 0 226.5 93.5t93.5 226.5-93.5 226.5-226.5 93.5-226.5-93.5-93.5-226.5q0-12 2-34l-360-180q-92 86-218 86-133 0-226.5-93.5t-93.5-226.5 93.5-226.5 226.5-93.5q126 0 218 86l360-180q-2-22-2-34 0-133 93.5-226.5t226.5-93.5 226.5 93.5 93.5 226.5-93.5 226.5-226.5 93.5q-126 0-218-86l-360 180q2 22 2 34t-2 34l360 180q92-86 218-86z"></path></svg>
+                                        <vime-tooltip>Compartilhar</vime-tooltip>
+                                    </vime-control>
+
+
+
+                                    <vime-settings-control></vime-settings-control>
+                                    <vime-fullscreen-control></vime-fullscreen-control>
+                            </vime-control-group>
+                        </vime-controls>
+
+                      </vime-default-ui>
                 </vime-player>
 
                 <a href="#" class="btn btn-outline-primary">voltar 10</a>
